Fix item-prop display to vert-align middle

--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -680,6 +680,8 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  align-items: center;
+  justify-content: center;
   -webkit-box-flex: 0;
   -ms-flex: 0 0 100px;
   flex: 0 0 100px;
@@ -728,6 +730,9 @@ textarea {
 }
 .hyp3e .items-list .item-prop {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-left: 1px solid #c9c7b8;
   border-right: 1px solid #c9c7b8;
   font-size: 12px;
